--- a/demo/demo-image-banner-container.html
+++ b/demo/demo-image-banner-container.html
@@ -27,9 +27,7 @@
 			}
 
 			.demo-image-banner-container-image {
-				background: -moz-linear-gradient(-45deg, #49c0f0 8%, #235d72 23%, #ffffff 41%, #a33299 52%, #040709 74%, #9540ce 90%, #2f7f19 100%); /* FF3.6-15 */
-				background: -webkit-linear-gradient(-45deg, #49c0f0 8%,#235d72 23%,#ffffff 41%,#a33299 52%,#040709 74%,#9540ce 90%,#2f7f19 100%); /* Chrome10-25,Safari5.1-6 */
-				background: linear-gradient(135deg, #49c0f0 8%,#235d72 23%,#ffffff 41%,#a33299 52%,#040709 74%,#9540ce 90%,#2f7f19 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+				background: linear-gradient(135deg, #49c0f0 8%,#235d72 23%,#ffffff 41%,#a33299 52%,#040709 74%,#9540ce 90%,#2f7f19 100%);
 				height: 100%;
 				transition: opacity 1s;
 				width: 100%;
