--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../d2l-polymer-behaviors/d2l-dom.html">
 <link rel="import" href="../d2l-simple-overlay/d2l-simple-overlay.html">
 <link rel="import" href="../iron-scroll-threshold/iron-scroll-threshold.html">
+<link rel="import" href="../siren-parser-import/siren-parser-global.html">
 <link rel="import" href="d2l-image-banner-overlay-styles.html">
 <link rel="import" href="localize-behavior.html">
 <!--
@@ -91,7 +92,6 @@ An overlay for course image banners that displays the course name and menu.
 			<span>[[_errorAlertStart]]</span><d2l-link href="javascript:window.location.reload(true)">[[localize('refreshAndTryAgain')]]</d2l-link><span>[[_errorAlertEnd]]</span>
 		</d2l-alert>
 	</template>
-	<script src="https://s.brightspace.com/lib/siren-parser/6.1.0/siren-parser-global.js"></script>
 	<script>
 		Polymer({
 			is: 'd2l-image-banner-overlay',
