--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -15,8 +15,8 @@
 				z-index: 1;
 				@apply --d2l-body-standard-text;
 			}
-			:host[image-selector-open] {
-				z-index: 1000;
+			:host([image-selector-open]) {
+				z-index: auto;
 			}
 
 			.d2l-image-banner-overlay-content {
